testing and naming convention and loggers added